--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "dependencies": {
     "@crowdin/crowdin-api-client": "^1.8.16",
     "@pancakeswap-libs/uikit": "0.6.1",
-    "bignumber.js": "^9.0.1"
+    "bignumber.js": "^9.0.1",
+    "caniuse-lite": "^1.0.30001616"
   }
 }
